# multi-platform

./: .gitignore  CMakeLists.txt  JenkinsPipeline  README.md  build-ninja.bat  build.sh  cppcheck.sh  mingw.toolchain  model.mdj  multi-platform.code-workspace  multi-platform.pc.in  run_cmake-linux.bat  run_cmake-linux.sh  run_cmake-mingw.bat  run_cmake-msvc.bat  valgrind.sh
source/components/: CMakeLists.txt
source/components/core/: .gitignore  CMakeLists.txt  core.pc.in
source/components/core/export/core/: ActiveObject.h  Array.h  AutoEvent.h  ByteArray.h  CommandLineOption.h  CommandLineOptionGroup.h  CommandLineParser.h  ConsoleLogger.h  Core.h  DateTime.h  DefaultLogger.h  Exception.h  Exception_.h  File.h  FileInfo.h  FileSystemInfo.h  FixedArray.h  IBinaryStream.h  IDataStream.h  ILogListener.h  IObservable.h  ITextStream.h  Iterator.h  LogHandler.h  Logger.h  ManualEvent.h  Nullable.h  Observable.h  Pipe.h  Print.h  Stopwatch.h  Thread.h  TimeSpan.h  Util.h  (+8 more)
source/components/core/src/: ActiveObject.cpp  AutoEvent.cpp  ByteArray.cpp  CommandLineOption.cpp  CommandLineOptionGroup.cpp  CommandLineParser.cpp  ConsoleLogger.cpp  Core.cpp  DateTime.cpp  File.cpp  FileInfo.cpp  FileSystemInfo.cpp  LogHandler.cpp  Logger.cpp  Pipe.cpp  Stopwatch.cpp  Thread.cpp  TimeSpan.cpp  Timer.cpp  Trace.cpp  Util.cpp  WorkerThread.cpp
source/components/core/test/: CMakeLists.txt
source/components/crypto/: .gitignore  CMakeLists.txt  sha256.c
source/components/crypto/src/: Base64.cpp  DES.cpp  MD2.cpp  MD5.cpp  SHA1.cpp  SHA256.cpp  SHA512.cpp  SHA512_.cpp
source/components/crypto/test/: CMakeLists.txt
source/components/database/: CMakeLists.txt
source/components/database/src/: CommandQuery.cpp  CreateTableQuery.cpp  CreateViewQuery.cpp  DBEngine.cpp  DataReader.cpp  DataRow.cpp  DataTable.cpp  Database.cpp  DatabaseHelpers.cpp  DeleteFromQuery.cpp  DeleteTableQuery.cpp  DeleteViewQuery.cpp  InsertBulkQuery.cpp  InsertQuery.cpp  RecordSet.cpp  SelectQuery.cpp  Table.cpp  UpdateQuery.cpp
source/components/database/test/: CMakeLists.txt
source/components/json/: CMakeLists.txt
source/components/json/include/: Parse.h
source/components/json/src/: Array.cpp  Boolean.cpp  JSONValue.cpp  Null.cpp  Number.cpp  Object.cpp  Parse.cpp  String.cpp  Value.cpp
source/components/json/test/: CMakeLists.txt
source/components/network/: CMakeLists.txt  network.pc
source/components/network/src/: Adapter.cpp  AdapterList.cpp  Address.cpp  DomainSocketAddress.cpp  IPV4Address.cpp  IPV4EndPoint.cpp  IPV6Address.cpp  IPV6EndPoint.cpp  MACAddress.cpp  Socket.cpp  TCPSocket.cpp  UDPSocket.cpp  UNIXSocket.cpp
source/components/network/test/: CMakeLists.txt
source/components/neural-network/: CMakeLists.txt
source/components/neural-network/src/: Neuron.cpp
source/components/neural-network/test/: CMakeLists.txt
source/components/osal/: .gitignore  CMakeLists.txt
source/components/osal/src/: Assert.cpp  ByteArray.cpp  DomainSocketAddress.cpp  IPV4Address.cpp  MACAddress.cpp  OSAL.cpp  Path.cpp  Pipe.cpp  Strings.cpp  Util.cpp  bytearray.cpp  osal.cpp  strings.cpp
source/components/osal/test/: CMakeLists.txt
source/components/parse-c++/: CMakeLists.txt  main.cpp  run-clang.sh
source/components/parse-c++/libclang/: CMakeLists.txt
source/components/parse-c++/src/: AST.cpp  ASTCollection.cpp  Container.cpp  Object.cpp  Parser.cpp  Utility.cpp
source/components/parse-c++/test/: CMakeLists.txt
source/components/parser/: CMakeLists.txt
source/components/parser/src/: InputReader.cpp  Lexer.cpp  Tokenizer.cpp
source/components/parser/test/: CMakeLists.txt
source/components/re/: CMakeLists.txt
source/components/re/src/: Regex.cpp  Tokenizer.cpp
source/components/re/test/: CMakeLists.txt
source/components/regex/: CMakeLists.txt
source/components/regex/src/: RE.cpp  Regex.cpp  Tokenizer.cpp
source/components/regex/test/: CMakeLists.txt
source/components/remoting/: CMakeLists.txt
source/components/remoting/export/: remoting1.h  remotingts1.h
source/components/remoting/src/: CMakeLists.txt
source/components/remoting/test/: CMakeLists.txt
source/components/settings/: CMakeLists.txt
source/components/settings/src/: settings.cpp
source/components/settings/test/: CMakeLists.txt
source/components/simd/: .gitignore  CMakeLists.txt
source/components/simd/src/: simd.cpp
source/components/simd/test/: CMakeLists.txt
source/components/sscf/: CMakeLists.txt
source/components/sscf/export/: sscf1.h  sscfts1.h
source/components/sscf/src/: CMakeLists.txt
source/components/sscf/test/: CMakeLists.txt
source/components/staruml/: CMakeLists.txt
source/components/staruml/src/: Class.cpp  ClassDiagram.cpp  Container.cpp  Diagram.cpp  Document.cpp  Model.cpp  Object.cpp  Package.cpp  Project.cpp
source/components/staruml/test/: CMakeLists.txt
source/components/unit-test-c++/: .gitignore  CMakeLists.txt
source/components/unit-test-c++/src/: AssertException.cpp  AssertionFailedException.cpp  AssertionResult.cpp  Checks.cpp  ConsoleTestReporter.cpp  CurrentTest.cpp  DeferredTestReporter.cpp  PrintValue.cpp  Settings.cpp  SignalTranslator.cpp  StreamTestReporter.cpp  Test.cpp  TestDetails.cpp  TestFixtureInfo.cpp  TestInfo.cpp  TestRegistry.cpp  TestResult.cpp  TestResults.cpp  TestRunner.cpp  TestSuiteInfo.cpp  TimeConstraint.cpp  Timer.cpp  XMLTestReporter.cpp
source/components/unit-test-c++/test/: CMakeLists.txt
source/components/xml/: .gitignore  CMakeLists.txt
source/components/xml/src/: XMLAttribute.cpp  XMLBase.cpp  XMLComment.cpp  XMLDeclaration.cpp  XMLDocument.cpp  XMLElement.cpp  XMLErrorInfo.cpp  XMLNode.cpp  XMLParsingData.cpp  XMLText.cpp  XMLUnknown.cpp
source/components/xml/test/: CMakeLists.txt
source/tools/gen-staruml-model/test/: CMakeLists.txt
source/tools/list-network-adapters/: CMakeLists.txt
source/tools/list-network-adapters/src/: main.cpp
source/tools/run-all-tests/: CMakeLists.txt
source/tools/run-all-tests/include/: CommandLineOptionsParser.h
source/tools/run-all-tests/src/: CommandLineOptionsParser.cpp  main.cpp
(+907 files in other folders)
