add_subdirectory(osal)
add_subdirectory(unit-test-c++)
add_subdirectory(core)
add_subdirectory(simd)
add_subdirectory(crypto)
add_subdirectory(network)

if(BUILD_TESTS)
    message(STATUS "Building tests")
    add_subdirectory(osal/test)
    add_subdirectory(core/test)
    add_subdirectory(unit-test-c++/test)
    add_subdirectory(simd/test)
    add_subdirectory(crypto/test)
    add_subdirectory(network/test)
endif(BUILD_TESTS)
