add_subdirectory(osal)
add_subdirectory(unit-test-c++)
add_subdirectory(core)
add_subdirectory(json)
add_subdirectory(crypto)
add_subdirectory(network)
add_subdirectory(xml)

if(BUILD_UNIT_TESTS)
    message(STATUS "Building unit tests")
    add_subdirectory(osal/test)
    add_subdirectory(core/test)
    add_subdirectory(unit-test-c++/test)
    add_subdirectory(json/test)
    add_subdirectory(crypto/test)
    add_subdirectory(network/test)
    add_subdirectory(xml/test)
endif()
