add_subdirectory(osal)
add_subdirectory(core)
add_subdirectory(network)
#add_subdirectory(regex)
#add_subdirectory(parser)
#add_subdirectory(neural-network)
#add_subdirectory(json)
#add_subdirectory(database)
#add_subdirectory(crypto)
#add_subdirectory(xml)
#add_subdirectory(parse-c++)
#add_subdirectory(staruml)

if(BUILD_UNIT_TESTS)
    message(STATUS "Building unit tests")
    add_subdirectory(osal/test)
    add_subdirectory(core/test)
    add_subdirectory(network/test)
#    add_subdirectory(regex/test)
#    add_subdirectory(parser/test)
#    add_subdirectory(neural-network/test)
#    add_subdirectory(json/test)
#    add_subdirectory(database/test)
#    add_subdirectory(crypto/test)
#    add_subdirectory(xml/test)
#    add_subdirectory(parse-c++/test)
#    add_subdirectory(staruml/test)
endif()