project(core CXX)

include(setup_target_properties_library)
include(show_target_properties)

message("\ncore\n")

set(COMPONENTS_CORE_DEFINITIONS
        CORE_DYNAMIC)

set(COMPONENTS_CORE_INCLUDE
        ${PROJECT_SOURCE_DIR}/include
        ${PROJECT_SOURCE_DIR}/export)

set(COMPONENTS_CORE_DEPENDENCIES
        osal)

set(COMPONENTS_CORE_LIBS
        ${CMAKE_THREAD_LIBS_INIT}
        ${COMPONENTS_CORE_DEPENDENCIES})

file(GLOB_RECURSE COMPONENTS_CORE_SOURCES src/*.cpp)
file(GLOB_RECURSE COMPONENTS_CORE_INCLUDES_EXPORT export/*.h)
file(GLOB_RECURSE COMPONENTS_CORE_INCLUDES include/*.h)

set(COMPONENTS_CORE_SOURCES
        ${COMPONENTS_CORE_SOURCES}
        ${COMPONENTS_CORE_INCLUDES_EXPORT}
        ${COMPONENTS_CORE_INCLUDES})

MESSAGE(STATUS "CMAKE_CXX_FLAGS:                    " ${CMAKE_CXX_FLAGS})
MESSAGE(STATUS "CMAKE_CXX_FLAGS_DEBUG:              " ${CMAKE_CXX_FLAGS_DEBUG} )
MESSAGE(STATUS "CMAKE_CXX_FLAGS_RELEASE:            " ${CMAKE_CXX_FLAGS_RELEASE} )
MESSAGE(STATUS "CMAKE_CXX_FLAGS_MINSIZEREL:         " ${CMAKE_CXX_FLAGS_MINSIZEREL} )
MESSAGE(STATUS "CMAKE_CXX_FLAGS_RELWITHDEBINFO:     " ${CMAKE_CXX_FLAGS_RELWITHDEBINFO} )
list_to_string(COMPONENTS_CORE_INCLUDE STR)
MESSAGE(STATUS "Include files:                      " ${STR} )
list_to_string(COMPONENTS_CORE_SOURCES STR)
MESSAGE(STATUS "Source files:                       " ${STR} )
list_to_string(COMPONENTS_CORE_LIBS STR)
MESSAGE(STATUS "Link libraries:                     " ${STR} )

# add the library
add_library(${PROJECT_NAME} SHARED ${COMPONENTS_CORE_SOURCES})
target_link_libraries(${PROJECT_NAME} ${COMPONENTS_CORE_LIBS})
target_include_directories(${PROJECT_NAME} PUBLIC ${COMPONENTS_CORE_INCLUDE})
target_compile_definitions(${PROJECT_NAME} PRIVATE CORE_BUILD)
target_compile_definitions(${PROJECT_NAME} PUBLIC ${COMPONENTS_CORE_DEFINITIONS})
setup_target_properties_library(${PROJECT_NAME})

show_target_properties(${PROJECT_NAME})

install(TARGETS ${PROJECT_NAME} DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)

